[package]
name        = "rpgtools"
version     = "1.4.0"
authors     = ["Aaron Seilis <aaron.seilis@seilis.ca>"]
edition     = "2021"
description = "Collection of utilities to help run tabletop role-playing games"
repository  = "https://github.com/seilis/rpg-tools"
readme      = "README.md"
keywords    = ["rpg", "rpg-tool", "role-playing-game", "tabletop-rpgs"]
categories  = ["games"]
license     = "GPL-3.0"

[dependencies]
clap      = {version = "^4.4.16", features = ["cargo"]}
eframe    = "0.29.1"
egui      = "0.29.1"
image     = "^0.24.7"
itertools = "^0.12.0"
rand      = "^0.8.5"
resvg     = "^0.37.0"
thiserror = "^2.0.9"
tiny-skia = "^0.11.3"
usvg      = "^0.37.0"

[[bin]]
name = "rpgmap"
path = "src/bin/rpgmap.rs"

[lib]
name = "rpgtools"
path = "src/rpgtools/lib.rs"

[profile.release]
# For profiling
#debug = true
